docs/css/style.css
html, body{
  scroll-behavior: smooth;
  padding: 0;
  margin: 0;
  background-color: #fff;
}

body{
  font-family: "Roboto", sans-serif;
  position: absolute;
  top: calc(var(--nSMaxWidth) * 5);
  width: 100%;
}

#loadingScreen{
  position: fixed;
  top: 0;
  left: 0;
  display: flex;
  justify-content: center;
  align-items: center;
  height: 100%;
  width: 100%;
  z-index: 2;
  background-color: #fff;
}

#loadingScreen.hide{
  visibility: hidden;
  opacity: 0;
  transition: .25s;
}

#loader{
  position: fixed;
  border: calc(var(--nSMaxWidth) * .25) solid #f3f3f3;
  border-top: calc(var(--nSMaxWidth) * .25) solid #037add;
  border-radius: 50%;
  width: calc(var(--nSMaxWidth) * 2.5);
	height: calc(var(--nSMaxWidth) * 2.5);
	left: calc(calc(100% - calc(var(--nSMaxWidth) * 2.5)) / 2);
	animation: spin 1.5s linear infinite;
}

@keyframes spin{
  100% { transform: rotate(360deg); }
}

noscript{
	position: relative;
	display: flex;
  flex-direction: column;
  align-items: center;
	top: calc(var(--nSMaxWidth) * 6);
	color: #037add;
	font-size: calc(var(--nSMaxWidth) * 1.45);
}

noscript a{
  border-radius: calc(var(--nSMaxWidth) * .25);
  cursor: pointer;
  text-decoration: none;
  color: #fff;
  background-color: #037add;
  font-size: calc(var(--nSMaxWidth) * 2);
  padding: calc(var(--nSMaxWidth) * 1);
  margin-top: calc(var(--nSMaxWidth) * 1);
}

noscript a:hover{
    background-color: #036dc5;
}

header{
  position: fixed;
  top: 0;
  box-shadow: 0 0 var(--nSMaxWidth) 0 rgba(0,0,0,.1);
  width: 100%;
  height: calc(var(--nSMaxWidth) * 5);
  background-color: #fff;
  z-index: 1;
}

header a{
  height: 100%;
	display: flex;
	align-items: center;
  text-decoration: none;
  color: #037add;
  font-size: calc(var(--nSMaxWidth) * 1.25);
}

#logo{
  display: flex;
  float: left;
  height: 100%;
}

#logo img{
  height: 100%;
  margin: 0 calc(var(--nSMaxWidth) * .5);
}

#logo a{
  font-size: calc(var(--nSMaxWidth) * 3);
}

nav{
  display: flex;
  align-items: center;
  float: left;
  height: 100%;
  margin-left: calc(var(--nSMaxWidth) * .5);
}

nav a{
  padding: 0 calc(var(--nSMaxWidth) * .5);
}

#languageChooser{
  display: flex;
  align-items: center;
  float: right;
  height: 100%;
}

#languageChooser a{
  padding: 0 calc(var(--nSMaxWidth) * .5);
  background-color: #fff;
  z-index: 1;
}

#languageChooserBar{
  height: calc(var(--nSMaxWidth) * 2);
  width: calc(var(--nSMaxWidth) * .15);
  background-color: #037add;
  border-top: calc(var(--nSMaxWidth) * 1.5) solid #fff;
  border-bottom: calc(var(--nSMaxWidth) * 1.5) solid #fff;
  z-index: 1;
}

#headerDownload{
  display: flex;
  align-items: center;
  justify-content: center;
  float: right;
  height: 100%;
  width: calc(var(--nSMaxWidth) * 14);
}

#headerDownload a{
  position: relative;
  justify-content: center;
  background-color: #037add;
  color: #fff;
  border-radius: calc(var(--nSMaxWidth) * .25);
  width: calc(var(--nSMaxWidth) * 13);
  height: calc(var(--nSMaxWidth) * 4);
  right: calc(var(--nSMaxWidth) * -13.5);
  visibility: hidden;
  z-index: 0;
}

#headerDownload a.show{
  right: calc(var(--nSMaxWidth) * 0);
  visibility: visible;
}

#headerDownload a.animate{
  transition: right .5s, bottom .5s, visibility .5s;
}

#headerDownload a:hover{
  background-color: #036dc5;
}

#landingPage{
  display: flex;
  align-items: center;
  justify-content: space-around;
  width: 100%;
  height: calc(calc(var(--nSHeight) * 100) - calc(var(--nSMaxWidth) * 5));
  overflow: hidden;
}

.landingPageImg{
  display: flex;
  height: 90%;
}

.landingPageImg.left img{
  object-fit: cover;
  object-position: right;
}

.landingPageImg.right img{
  object-fit: cover;
  object-position: left;
}

#landingPageContent{
  display: flex;
  height: calc(var(--nSMaxWidth) * 40);
  flex-direction: column;
  align-items: center;
  color: #037add;
  background-color: #fff;
}


#landingPageContent img{
  width: calc(var(--nSMaxWidth) * 10);
  height: calc(var(--nSMaxWidth) * 10);
}

#landingPageContentHeading{
  font-size: calc(var(--nSMaxWidth) * 5);
  line-height: calc(var(--nSMaxWidth) * 5);
}

#landingPageContentMain{
  display: flex;
  text-align: center;
  margin-top: calc(var(--nSMaxWidth) * .5);
  font-size: calc(var(--nSMaxWidth) * 2);
  width: calc(var(--nSMaxWidth) * 32.5);
  height: calc(var(--nSMaxWidth) * 12.5);
}

#landingPageContent a{
  position: relative;
  display: flex;
  border-radius: calc(var(--nSMaxWidth) * .25);
  cursor: pointer;
  text-decoration: none;
  color: #fff;
  background-color: #037add;
  justify-content: center;
  align-items: center;
  font-size: calc(var(--nSMaxWidth) * 1.75);
  width: calc(var(--nSMaxWidth) * 17.5);
  height: calc(var(--nSMaxWidth) * 5);
  top: calc(var(--nSMaxWidth) * 3.5);
}

#landingPageContent a:hover{
  background-color: #036dc5;
}

#landingPageScroll{
  position: absolute;
  width: calc(var(--nSMaxWidth) * 5);
  height: calc(var(--nSMaxWidth) * 5);
  left: calc(calc(calc(var(--nSWidth) * 100) - calc(var(--nSMaxWidth) * 5)) / 2);
  top: calc(calc(calc(calc(var(--nSHeight) * 100) - calc(var(--nSMaxWidth) * 5)) / 2) + calc(var(--nSMaxWidth) * 25));
}

#landingPageScroll::before{
  position: absolute;
  width: calc(var(--nSMaxWidth) * 7.5);
  height: calc(var(--nSMaxWidth) * 7.5);
  border-style: solid;
  border-color: #037add;
  border-width: calc(var(--nSMaxWidth) * .25) calc(var(--nSMaxWidth) * .25) 0 0;
  content: '';
  left: calc(var(--nSMaxWidth) * 1.375);
  top: calc(var(--nSMaxWidth) * 1.375);
  height: calc(var(--nSMaxWidth) * 2);
  transform: rotate(135deg);
  width: calc(var(--nSMaxWidth) * 2);
}

.pageContent{
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100%;
}

.pageContentText{
  display: flex;
  width: calc(var(--nSMaxWidth) * 50);
  height: calc(calc(calc(var(--nSHeightMFF) * 100) - calc(var(--nSMaxWidth) * 5)) / 2);
  min-height: calc(var(--nSMaxWidth) * 30);
  flex-direction: column;
  justify-content: center;
  color: #037add;
}

.pageContentTextHeading{
  font-size: calc(var(--nSMaxWidth) * 4.5);
  line-height: calc(var(--nSMaxWidth) * 4.5);
  margin-left: calc(calc(100% - calc(var(--nSMaxWidth) * 32.5)) / 2);
  width: calc(var(--nSMaxWidth) * 35);
}


.pageContentTextMain{
  display: flex;
  margin-top: calc(var(--nSMaxWidth) * .5);
  font-size: calc(var(--nSMaxWidth) * 2);
  width: calc(var(--nSMaxWidth) * 32.5);
  height: calc(var(--nSMaxWidth) * 12.5);
  margin-left: calc(calc(100% - calc(var(--nSMaxWidth) * 32.5)) / 2);
}

.pageContentImg{
  display: flex;
  justify-content: center;
  height: calc(calc(calc(var(--nSHeightMFF) * 100) - calc(var(--nSMaxWidth) * 5)) / 2);
  min-height: calc(var(--nSMaxWidth) * 30);
  width: calc(var(--nSMaxWidth) * 50);
}

.pageContentImg img{
  height: 100%;
  width: 100%;
}

footer{
  margin-top: calc(var(--nSMaxWidth) * 4);
  width: 100%;
  height: calc(var(--nSMaxWidth) * 21);
  background-color: #fff;
}

#footerDownload{
  margin-bottom: calc(var(--nSMaxWidth) * 4);
  display: flex;
  height: calc(var(--nSMaxWidth) * 12.5);
  width: 100%;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  background-color: #037add;
  background-image: url("../img/footerDownload.svg");
  background-position: center;
  background-repeat: no-repeat;
  background-size: contain;
}

#footerDownloadHeading{
  font-size: calc(var(--nSMaxWidth) * 2.5);
  color: #fff;
}

#footerDownload a{
    display: flex;
    border-radius: calc(var(--nSMaxWidth) * .25);
    cursor: pointer;
    text-decoration: none;
    color: #fff;
    background-color: #037add;
    justify-content: center;
    align-items: center;
    font-size: calc(var(--nSMaxWidth) * 1.75);
    width: calc(var(--nSMaxWidth) * 17);
    height: calc(var(--nSMaxWidth) * 4.5);
    margin-top: calc(var(--nSMaxWidth) * 1);
    border: calc(var(--nSMaxWidth) * .175) solid #fff;
}

#footerDownload a:hover{
  background-color: #fff;
  color: #037add;
}

#footerContent{
  display: flex;
  height: calc(var(--nSMaxWidth) * 5);
  width: 100%;
  background-color: #fff;
  align-items: center;
  justify-content: center;
}

#footerContent a{
  cursor: pointer;
  text-decoration: none;
  color: #037add;
  font-size: calc(var(--nSMaxWidth) * 1.75);
  margin: calc(var(--nSMaxWidth) * .5);
}

@media screen and (max-width: 100rem) and (min-width: 638px){
  #loader, noscript{--nSMaxWidth: 1vw;}
}

@media screen and (min-width: 100rem) and (min-width: 638px){
  #loader, noscript{--nSMaxWidth: 1rem;}
}

@media screen and (max-width: 637px) and (max-aspect-ratio: 1/1){
  #loader, noscript{--nSMaxWidth: 2.5vw;}
}

@media screen and (max-width: 637px) and (min-aspect-ratio: 1/1){
  #loader, noscript{--nSMaxWidth: 2.5vh;}
}

@media screen and (min-width: 638px){
  #landingPage{
      min-height: calc(var(--nSMaxWidth) * 40);
  }
}

@media screen and (max-width: 637px) and (min-aspect-ratio: 200/325){
  #landingPageScroll{
    display: none;
  }
  #landingPageScroll::before{
    display: none;
  }
}

@media screen and (min-width: 638px) and (max-height: 64.5vw) and (max-height: 65rem){
  #landingPageScroll{
    display: none;
  }
  #landingPageScroll::before{
    display: none;
  }
}

@media screen and (max-width: 637px) {
  #headerDownload{
    width: 0;
  }
  #headerDownload a{
    position: fixed;
    bottom: calc(var(--nSMaxWidth) * -5);
    left: 0;
    width: 100%;
    border-radius: 0;
    border-top-left-radius: calc(var(--nSMaxWidth) * .25);
    border-top-right-radius: calc(var(--nSMaxWidth) * .25);
    height: calc(var(--nSMaxWidth) * 5);
    font-size: calc(var(--nSMaxWidth) * 2);
  }
  #headerDownload a.show{
    bottom: calc(var(--nSMaxWidth) * 0);
    visibility: visible;
  }
  #landingPageContent{
    height: calc(var(--nSMaxWidth) * 35);
  }
  #landingPageContentMain{
    font-size: calc(var(--nSMaxWidth) * 1.75);
    height: calc(var(--nSMaxWidth) * 8.25);
  }
  #landingPageContent a{
    top: calc(var(--nSMaxWidth) * 2.625);
  }
  .pageContent{
    flex-direction: column;
  }
  .pageContent.reverse{
    flex-direction: column-reverse;
  }
  .pageContentText{
    width: 100%;
  }
  .pageContentImg{
    width: 100%;
  }
  footer{
    height: calc(var(--nSMaxWidth) * 10);
  }
  #footerDownload{
    display: none;
  }
}

